--- a/sitomem.html
+++ b/sitomem.html
@@ -76,50 +76,39 @@
 <br /><br />
 
 <article>
-  <div class="step" data-step="1">
+  <div class="step11" >
     <p>
-<<<<<<< Updated upstream
       Oggi considerato come uno dei film <br>più importanti del nuovo
       millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi <font color="d24f2c"><b>Oscar</b></font>
       per miglior sceneggiatura originale <br>e miglior montaggio.
-=======
-      Oggi considerato come uno dei film più importanti del nuovo
-      millennio, nel 2002 ricevette anche le candidature ai premi Oscar
-      per miglior sceneggiatura originale e miglior montaggio.
->>>>>>> Stashed changes
     </p>
   </div>
+
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   <br /><br /><br /><br />
-  <div class="step" data-step="2">
+  <div class="step2" >
     <p>
-<<<<<<< Updated upstream
       I protagonisti dei film di Nolan <br>presentano sempre un rapporto
       complesso <br>con <font color="d24f2c"><b>realtà</b></font> e <font color="d24f2c"><b>memoria</b></font>, e il regista si diverte a
       raccontarne <br>le gesta giocando con il tempo, o per meglio dire,<br>
-=======
-      I protagonisti dei film di Nolan presentano sempre un rapporto
-      complesso con realtà e memoria, e il regista si diverte a
-      raccontarne le gesta giocando con il tempo, o per meglio dire,
->>>>>>> Stashed changes
       utilizzando una struttura temporale non lineare.
     </p>
   </div>
+
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
   <br /><br /><br /><br />
-  <div class="step" data-step="3">
+  <div class="step12" >
     <p>
-<<<<<<< Updated upstream
       Leonard Shelby in Memento <br> mette in discussione i suoi <font color="d24f2c"><b>ricordi</b></font>, <br> il
       tempo continua a giocare <br> un ruolo chiave nella storia.
-=======
-      Leonard Shelby in Memento mette in discussione i suoi ricordi il
-      tempo continua a giocare un ruolo chiave nella storia.
->>>>>>> Stashed changes
     </p>
   </div>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+
   <br /><br /><br /><br />
-  <div class="step" data-step="4">
+  <div class="step2" >
     <p>
-<<<<<<< Updated upstream
       Il regista ci fa credere che ci dobbiamo fidare <br> solo dei <font color="d24f2c"><b>tatuaggi</b></font>
       e delle <font color="d24f2c"><b>polaroid</b></font>, <br> dati come <font color="d24f2c"><b>evidenze</b></font>, perché il protagonista <br> non
       avendo memoria a lungo termine <br> li utilizza come strumenti che gli
@@ -184,40 +173,6 @@ Partiamo dal montaggio di Nolan
       Adesso ti proponiamo un'analisi delle scene <br> ricostruendo l'<font color="d24f2c"><b>ordine cronologico</b></font> degli eventi, <br> attraverso una rilettura delle evidenze: polaroid e tatuaggi,<br>
       che rappresentano l'unico punto di riferimento oggettivo <br> per il protagonista.
     </p>
-=======
-      Ti proponiamo una visualizzazione pensata proprio per coloro che
-      dopo aver visto il film sono rimasti con più domande che risposte.
-      Con questa visualizzazione proveremo a rispondere ad alcune
-      domande
-    </p>
-  </div>
-  <br /><br /><br /><br />
-  <div class="step" data-step="5">
-    <p>
-      Il montaggio prevede che la storia alterni ogni 15 minuti una
-      scena cronologicamente opposta alla precedente. La pellicola parte
-      quindi dalla fine e si conclude poco dopo la metà, alternando
-      scene in bianco e nero e a colori.
-    </p>
-  </div>
-  <br /><br /><br /><br />
-  <div class="step" data-step="6">
-    <p>
-      Il regista ci fa credere che ci dobbiamo fidare solo dei tatuaggi
-      e delle polaroid, dati come evidenze, perché il protagonista non
-      avendo memoria a lungo termine li utilizza come strumenti che gli
-      permettono di orientarsi ogni giorno.
-    </p>
-   
-    <br /><br /><br /><br /><br /><br /><br /><br />
-    <div class="step" data-step="7">
-      <p>
-        Crediamo che le evidenze siano l’unico dato che ci faccia
-        comprendere l’oggettività dei fatti, ma quanto la soggettività
-        del protagonista influenza le sue azioni?
-      </p>
-    </div>
->>>>>>> Stashed changes
   </div>
 </article>
 
@@ -740,7 +695,7 @@ Partiamo dal montaggio di Nolan
             />
           </div>
         </div>
-        <div class="section" id="section2">
+        <div class="section" id="section1">
           <div class="img-container">
             <img
               src="polaroidtattoo/p6v.jpg"
@@ -749,19 +704,19 @@ Partiamo dal montaggio di Nolan
             />
           </div>
         </div>
-        <div class="section" id="section4">
+        <div class="section" id="section2">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p1v.jpg"
+              src="polaroidtattoo/p2+s.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
           </div>
         </div>
-        <div class="section" id="section4">
+        <div class="section" id="section3">
           <div class="img-container">
             <img
-              src="polaroidtattoo/p2v.jpg"
+              src="polaroidtattoo/p1v.jpg"
               alt="Memento Imagen 1"
               class="img"
             />
