--- a/sitomem.html
+++ b/sitomem.html
@@ -142,10 +142,13 @@
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       <br /><br /><br /><br /><br />
+    </article>
+    <article>
       <div class="stepcg">
         <p>Ma possiamo ritenere questi dati davvero oggettivi?</p>
         <!-- al centro grande-->
       </div>
+      
       <br /><br /><br /><br />
       <br />
       <br /><br /><br /><br />
@@ -163,10 +166,12 @@
       <br /><br /><br /><br />
       <br /><br /><br /><br />
       <br /><br /><br /><br />
+
       <div class="stepcg">
         <p>Partiamo dal montaggio di Nolan</p>
         <!-- al centro grande-->
       </div>
+      
       <br /><br /><br /><br />
       <br />
       <br /><br /><br /><br />
