--- a/sitomem.html
+++ b/sitomem.html
@@ -92,10 +92,9 @@
     <article>
       <div class="step11">
         <p>
-          Oggi considerato come uno dei film <br />più importanti del nuovo
-          millennio, <br />nel 2002 ricevette anche le candidature <br />ai
-          premi <font color="d24f2c"><b>Oscar</b></font> per miglior
-          sceneggiatura originale <br />e miglior montaggio.
+          Oggi considerato come uno dei film <br>più importanti del nuovo
+          millennio, <br>nel 2002 ricevette anche le candidature <br>ai premi <font color="d24f2c"><b>Oscar</b></font>
+          per miglior sceneggiatura <br>originale e miglior montaggio.
         </p>
       
     
@@ -103,12 +102,11 @@
       <br /><br /><br /><br />
       <div class="step2">
         <p>
-          I protagonisti dei film di Nolan <br />presentano sempre un rapporto
-          complesso <br />con <font color="d24f2c"><b>realtà</b></font> e
-          <font color="d24f2c"><b>memoria</b></font
-          >, e il regista si diverte a raccontarne <br />le gesta giocando con
-          il tempo, o per meglio dire,<br />
-          utilizzando una struttura temporale non lineare.
+          I protagonisti dei film di Nolan <br> presentano sempre un rapporto <br>
+        complesso con <font color="d24f2c"><b>realtà</b></font> e <font color="d24f2c"><b>memoria</b></font> <br> e il
+        regista si diverte a
+        raccontarne <br>le gesta giocando con il tempo, <br> o per meglio dire,
+        utilizzando una<br> struttura temporale <font color="d24f2c"><b> non lineare.</b></font>
         </p>
       </div>
 
@@ -117,11 +115,8 @@
       <br /><br /><br /><br />
       <div class="step12">
         <p>
-          Leonard Shelby in Memento <br />
-          mette in discussione i suoi <font color="d24f2c"><b>ricordi</b></font
-          >, <br />
-          il tempo continua a giocare <br />
-          un ruolo chiave nella storia.
+          Leonard Shelby in Memento <br> mette in discussione i suoi <font color="d24f2c"><b>ricordi</b></font>, <br> il
+          tempo continua a giocare <br> un ruolo chiave nella storia.
         </p>
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -129,15 +124,11 @@
       <br /><br /><br /><br />
       <div class="step2">
         <p>
-          Il regista ci fa credere che ci dobbiamo fidare <br />
-          solo dei <font color="d24f2c"><b>tatuaggi</b></font> e delle
-          <font color="d24f2c"><b>polaroid</b></font
-          >, <br />
-          dati come <font color="d24f2c"><b>evidenze</b></font
-          >, perché il protagonista <br />
-          non avendo memoria a lungo termine <br />
-          li utilizza come strumenti che gli permettono <br />di orientarsi
-          nella vita quotidiana.
+          Il regista ci fa credere che ci dobbiamo <br> fidare solo dei <font color="d24f2c"><b>tatuaggi</b></font>
+          e delle <font color="d24f2c"><b>polaroid</b></font>, <br> dati come <font color="d24f2c"><b>evidenze</b></font>,
+          perché il protagonista <br> non
+          avendo memoria a lungo termine li<br> utilizza come strumenti che gli
+          permettono<br> di orientarsi nella vita quotidiana.
         </p>
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -180,13 +171,10 @@
 
       <div class="step13">
         <p>
-          Il <font color="d24f2c"><b>montaggio</b></font> prevede che la storia
-          <br />
-          alterni ogni 15 minuti una scena <br />
-          cronologicamente opposta alla precedente. <br />La pellicola parte
-          quindi dalla fine <br />
-          e si conclude poco dopo la metà,<br />
-          alternando scene in bianco e nero e a colori.
+          Il <font color="d24f2c"><b>montaggio</b></font> prevede che la storia <br> alterni ogni 15 minuti una
+          scena <br> cronologicamente opposta alla precedente. <br>La pellicola parte
+          quindi dalla fine <br> e si conclude poco dopo la metà,<br> alternando
+          scene in bianco e nero e a colori.
         </p>
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -206,8 +194,8 @@
     <article>
       <div class="stepcg">
         <p>
-          Ci siamo chiesti: quanto la soggettività del protagonista interferisce
-          con la presunta veridicità delle evidenze?
+          Ci siamo chiesti: <br> quanto la soggettività del protagonista interferisce con la presunta veridicità delle
+        evidenze?
         </p>
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -215,12 +203,9 @@
       <br /><br /><br /><br />
       <div class="step11">
         <p>
-          Adesso ti proponiamo un'analisi delle scene <br />
-          ricostruendo l'<font color="d24f2c"><b>ordine cronologico</b></font>
-          degli eventi, <br />
-          attraverso una rilettura delle evidenze: polaroid e tatuaggi,<br />
-          che rappresentano l'unico punto di riferimento oggettivo <br />
-          per il protagonista.
+          Adesso ti proponiamo un'analisi delle scene <br> ricostruendo l'<font color="d24f2c"><b>ordine cronologico</b>
+          </font> eventi, <br> attraverso una rilettura delle evidenze: <br> polaroid e tatuaggi,
+          che rappresentano l'unico <br>punto di riferimento oggettivo per il protagonista.
         </p>
       </div>
     </article>
@@ -1287,12 +1272,12 @@
       <br /><br /><br /><br />
       <div class="step2">
         <p>
-          Il regista dimostra che la linea che separa realtà e immaginazione è
-          estremamente labile. Sta allo spettatore comprenderlo: quello di
-          Nolan, infatti, può essere definito una sorta di cinema interattivo,
-          in cui lo spettatore, a differenza di Leonard, può sentirsi libero di
-          fidarsi delle proprie percezioni e sensazione nell’attribuire un
-          significato alle cose.
+          Il regista dimostra che la linea che separa realtà e immaginazione è estremamente labile.
+        Sta allo spettatore comprenderlo: quello di Nolan, infatti,
+        può essere definito una sorta di <font color="d24f2c"><b> cinema interattivo</b>
+        </font>, in cui lo spettatore,
+        a differenza di Leonard, può sentirsi libero di fidarsi delle proprie percezioni e
+        sensazione nell’attribuire un significato alle cose.
         </p>
       </div>
 
@@ -1301,8 +1286,9 @@
       <br /><br /><br /><br />
       <div class="step12">
         <p>
-          Forse Leonard non è interessato a scoprire la verità, quanto piuttosto
-          a raggiungere una verità che si adatti alle proprie necessità.
+          Forse Leonard non è interessato a scoprire la <font color="d24f2c"><b>verità</b>
+          </font>,
+          quanto piuttosto a raggiungere una verità che si adatti alle proprie necessità.
         </p>
       </div>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
