--- a/sitomem.html
+++ b/sitomem.html
@@ -26,12 +26,8 @@
     </nav>
 
     <br /><br />
-<div id="grandezzaschermo"> 
-    <video autoplay muted>
-   <source src="memento.mp4" type="video/mp4">
+   <img id="titolo" src="memento.mp4">
     
-    </video>
-  </div>
     <br /><br />
     <br /><br />
     <br /><br />
