--- a/sitomem.html
+++ b/sitomem.html
@@ -171,7 +171,7 @@
     <p></p>
     <p></p>
     <p></p>
-    <img id="schema" src="grafico.jpg" />
+    <img id="schema" src="schema (1)_Tavola disegno 1.png" />
 
     <br /><br /><br /><br />
     <br /><br /><br /><br />
