correzione paragrafo testo

--- a/sitomem.html
+++ b/sitomem.html
@@ -189,7 +189,7 @@
       <div class="step11">
         <p>
           Adesso ti proponiamo un'analisi delle scene <br> ricostruendo l'<font color="d24f2c"><b>ordine cronologico</b>
-          </font> eventi, <br> attraverso una rilettura delle evidenze: <br> polaroid e tatuaggi,
+          </font> degli eventi, <br> attraverso una rilettura delle evidenze: <br> polaroid e tatuaggi,
           che rappresentano l'unico <br>punto di riferimento oggettivo per il protagonista.
         </p>
       </div>
