--- a/sitomem.html
+++ b/sitomem.html
@@ -770,7 +770,7 @@
         <div class="section" id="section6">
           <div class="img-container">
             <img
-              src="polaroidtattoo/thefacts.jpg"
+              src="polaroidtattoo/the facts n.PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -781,7 +781,7 @@
         <div class="section" id="section6">
           <div class="img-container">
             <img
-              src="polaroidtattoo/remember.jpg"
+              src="polaroidtattoo/remember n .PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -814,7 +814,7 @@
         <div class="section" id="section10">
           <div class="img-container">
             <img
-              src="polaroidtattoo/findhim.jpg"
+              src="polaroidtattoo/find him n .PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -836,7 +836,7 @@
         <div class="section" id="section10">
           <div class="img-container">
             <img
-              src="polaroidtattoo/fact5.jpg"
+              src="polaroidtattoo/fact 5 n.PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -858,7 +858,7 @@
               <div class="section" id="section10">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/thefacts.jpg"
+                    src="polaroidtattoo/the facts n.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -869,7 +869,7 @@
               <div class="section" id="section12">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/johng.jpg"
+                    src="polaroidtattoo/john g. n .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -932,7 +932,7 @@
               <div class="section" id="section19">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/fact5.jpg"
+                    src="polaroidtattoo/fact 5 n.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -959,7 +959,7 @@
                 <div class="section" id="section23">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/never.jpg"
+                    src="polaroidtattoo/never n .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -979,7 +979,7 @@
               <div class="section" id="section26">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/remember.jpg"
+                    src="polaroidtattoo/remember n .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -999,7 +999,7 @@
               <div class="section" id="section29">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/remember.jpg"
+                    src="polaroidtattoo/remember n .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1009,7 +1009,7 @@
               <div class="section" id="section32">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/fact5.jpg"
+                    src="polaroidtattoo/fact 5 n.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1029,7 +1029,7 @@
               <div class="section" id="section32">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/findhim.jpg"
+                    src="polaroidtattoo/find him n .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1121,7 +1121,7 @@
                       <div class="section" id="section42">
                         <div class="img-container">
                           <img
-                            src="polaroidtattoo/remember.jpg"
+                            src="polaroidtattoo/remember n .PNG"
                             alt="Memento Imagen 1"
                             class="img"
                           />
