TATUAGGI FINALI CORRETTI DRITTI

--- a/sitomem.html
+++ b/sitomem.html
@@ -756,7 +756,7 @@
           <div class="img-container">
 
               <img
-                src="polaroidtattoo/remember.jpg"
+                src="polaroidtattoo/remember n .PNG"
                 alt="Memento Imagen 1"
                 class="img"
               />
@@ -823,7 +823,7 @@
         <div class="section" id="section10">
           <div class="img-container">
             <img
-              src="polaroidtattoo/find him n .PNG"
+              src="polaroidtattoo/find him nuovo.PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -834,7 +834,7 @@
         <div class="section" id="section10">
           <div class="img-container">
             <img
-              src="polaroidtattoo/house.jpg"
+              src="polaroidtattoo/photograph n .PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -845,7 +845,7 @@
         <div class="section" id="section10">
           <div class="img-container">
             <img
-              src="polaroidtattoo/fact 5 n.PNG"
+              src="polaroidtattoo/fact 5 N .PNG"
               alt="Memento Imagen 1"
               class="img"
             />
@@ -856,7 +856,7 @@
         <div class="section" id="section10">
           <div class="img-container">
               <img
-                src="polaroidtattoo/fact6.jpg"
+                src="polaroidtattoo/FACT 6 NUOVO.png"
                 alt="Memento Imagen 1"
                 class="img"
               />
@@ -878,7 +878,7 @@
               <div class="section" id="section12">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/john g. n .PNG"
+                    src="polaroidtattoo/john g NUOVO.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -941,7 +941,7 @@
               <div class="section" id="section19">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/fact 5 n.PNG"
+                    src="polaroidtattoo/fact 5 N .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -968,7 +968,7 @@
                 <div class="section" id="section23">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/never n .PNG"
+                    src="polaroidtattoo/never N.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1018,7 +1018,7 @@
               <div class="section" id="section32">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/fact 5 n.PNG"
+                    src="polaroidtattoo/fact 5 N .PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1028,7 +1028,7 @@
               <div class="section" id="section32">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/fact6.jpg"
+                    src="polaroidtattoo/FACT 6 NUOVO.png"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -1038,7 +1038,7 @@
               <div class="section" id="section32">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/find him n .PNG"
+                    src="polaroidtattoo/find him nuovo.PNG"
                     alt="Memento Imagen 1"
                     class="img"
                   />
