--- a/sitomem.html
+++ b/sitomem.html
@@ -45,7 +45,7 @@
       </div>
 
       <div id="announcement-container">
-        <p>Passa con il mouse sulla polaroid per scoprirne l'immagine!</p>
+        <p>Passa il mouse sulla polaroid per scoprirne l'immagine!</p>
       </div>
     
 
