--- a/sitomem.html
+++ b/sitomem.html
@@ -917,7 +917,7 @@
                 <div class="section" id="section16">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/C.Dodd.jpg"
+                    src="polaroidtattoo/C.Doddscritta.jpg"
                     alt="Memento Imagen 1"
                     class="img"
                   />
@@ -927,7 +927,7 @@
               <div class="section" id="section18">
                 <div class="img-container">
                   <img
-                    src="polaroidtattoo/C.Doddscritta.jpg"
+                    src="polaroidtattoo/C.Dodds.jpg"
                     alt="Memento Imagen 1"
                     class="img"
                   />
