--- a/sitomem.html
+++ b/sitomem.html
@@ -1297,10 +1297,20 @@
 
     <br /><br /><br /><br />
     
+    <br /><br /><br /><br />
+    <br /><br /><br /><br /><br />
 
-    <footer>
-      <p>© 2023 Memento Website</p>
+   
+   
+
+    
+      <ul id="footer">
+      <li><p>Gruppo 4</p></li>
+      <li> <img src="logo.png" id="logo" /></li>
+      </ul>
+      <footer>
     </footer>
+
 
     <script>
       // document.addEventListener("DOMContentLoaded", function () {
