--- a/sitomem.html
+++ b/sitomem.html
@@ -972,24 +972,36 @@
 
 
                 <div class="section" id="section16">
-                <div class="img-container">
-                  <img
-                    src="polaroidtattoo/C.Dodd.jpg"
-                    alt="Memento Imagen 1"
-                    class="img"
-                  />
-                </div>
-              </div> 
+                  <div class="img-container">
+                    <div id="cambioimmagine">
+                      <img
+                        src="polaroidtattoo/retroneutro.jpg"
+                        alt="Memento Imagen 1"
+                        class="img1"
+                      />
+                      <img
+                        src="polaroidtattoo/C.mortoocchiali.jpg"
+                        alt="Memento Imagen 1"
+                        class="img2"
+                      />
+                    </div>
+                  </div> </div>
               
               <div class="section" id="section18">
                 <div class="img-container">
-                  <img
-                    src="polaroidtattoo/C.Doddscritta.jpg"
-                    alt="Memento Imagen 1"
-                    class="img"
-                  />
-                </div>
-              </div> 
+                  <div id="cambioimmagine">
+                    <img
+                      src="polaroidtattoo/retroneutro.jpg"
+                      alt="Memento Imagen 1"
+                      class="img1"
+                    />
+                    <img
+                      src="polaroidtattoo/C.mortoocchiali.jpg"
+                      alt="Memento Imagen 1"
+                      class="img2"
+                    />
+                  </div>
+                </div> </div>
               
               <div class="section" id="section19">
                 <div class="img-container">
