--- a/sitomem.html
+++ b/sitomem.html
@@ -1113,6 +1113,9 @@
                 </div>
               </div>
 
+
+
+              
               <div class="section" id="section32">
                 <div class="img-container">
                   <div id="cambioimmagine">
@@ -1410,7 +1413,7 @@
 
     
       <ul id="footer">
-      <li><p>Gruppo 4</p></li>
+      <li><p id="gruppo">Gruppo 4</p></li>
       <li> <img src="logo.png" id="logo" /></li>
       </ul>
       <footer>
