ordine polaroid finaleee

--- a/sitomem.html
+++ b/sitomem.html
@@ -985,12 +985,12 @@
                       <div class="img-container">
                         <div id="cambioimmagine">
                           <img
-                            src="polaroidtattoo/Bdrugdealerretro.jpg"
+                            src="polaroidtattoo/C.drugdealerretro.jpg"
                             alt="Memento Imagen 1"
                             class="img1"
                           />
                           <img
-                            src="polaroidtattoo/C.drugdealer.jpg"
+                            src="polaroidtattoo/B.drugdealer.jpg"
                             alt="Memento Imagen 1"
                             class="img2"
                           />
@@ -1081,17 +1081,7 @@
                 </div>
               </div>
               
-              <div class="section" id="section32">
-                <div class="img-container">
-                  <img
-                    src="polaroidtattoo/find him nuovo.PNG"
-                    alt="Memento Imagen 1"
-                    class="img"
-                  />
-                </div>
-              </div>
-
-              <div class="section" id="section32">
+              <div class="section" id="section39">
                 <div class="img-container">
                   <div id="cambioimmagine">
                     <img
@@ -1101,6 +1091,23 @@
                     />
                     <img
                       src="polaroidtattoo/C.jaguar.jpg"
+                      alt="Memento Imagen 1"
+                      class="img2"
+                    />
+                  </div>
+                </div> </div>
+
+
+              <div class="section" id="section39">
+                <div class="img-container">
+                  <div id="cambioimmagine">
+                    <img
+                      src="polaroidtattoo/retroneutro.jpg"
+                      alt="Memento Imagen 1"
+                      class="img1"
+                    />
+                    <img
+                      src="polaroidtattoo/C.Inn.jpg"
                       alt="Memento Imagen 1"
                       class="img2"
                     />
