correzione grandezze tatoo

--- a/sitomem.html
+++ b/sitomem.html
@@ -733,7 +733,7 @@
             <img
               src="polaroidtattoo/fact 5 N .PNG"
               alt="Memento Imagen 1"
-              class="img"
+              class="imgt"
             />
    
         </div>
@@ -1037,7 +1037,7 @@
                   <img
                     src="polaroidtattoo/john g NUOVO.PNG"
                     alt="Memento Imagen 1"
-                    class="img"
+                    class="imgt"
                   />
                 </div>
               </div> 
