--- a/sitomem.html
+++ b/sitomem.html
@@ -25,13 +25,10 @@
       </ul>
     </nav>
 
-    <br /><br />
-   <img id="titolo" src="memento.mp4">
+   
+   <img id="titolo" src="Ilustración_sin_título.jpg">
     
-    <br /><br />
-    <br /><br />
-    <br /><br />
-    <br /><br />
+  
 
 
 
