--- a/sitomem.html
+++ b/sitomem.html
@@ -26,7 +26,11 @@
     </nav>
 
    
-   <img id="titolo" src="Ilustración_sin_título.jpg">
+    <video id="titolo" autoplay muted control>
+      <!-- Includi il video nel tag source -->
+      <source src="memento.mp4" type="video/mp4">
+      Il tuo browser non supporta il tag video.
+    </video>
     
   
 
