--- a/sitomem.html
+++ b/sitomem.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scrollama: Sticky Overlay Example</title>
-    <meta name="description" content="Scrollama: Sticky Overlay Example" />
+    <title>MEMENTO</title>
+    <meta name="description" content="MEMENTO" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/etl6wzo.css" />
@@ -26,7 +26,7 @@
     </nav>
 
    
-    <video id="titolo" autoplay muted control>
+    <video id="titolo" autoplay muted >
       <!-- Includi il video nel tag source -->
       <source src="memento.mp4" type="video/mp4">
       Il tuo browser non supporta il tag video.
@@ -1351,25 +1351,28 @@
     </section>
     <br /><br /><br /><br /><br />
 
-    <br /><br /><br /><br />
+    <br /><br /><br /><br />   <a name="conclusione"></a>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 <br/>
 <br/>
 <br/>
 <br/>
 <br/>
 
+<br/>
+<br/>
+<br/>
+<br/>
 
-    <a name="conclusione"></a>
+<br/>
+<br/>
+<br/>
+<br/>
+
+
+ 
 
     <article>
       <div class="stepcg">
@@ -1423,7 +1426,7 @@
 
     
       <ul id="footer">
-      <li><p id="gruppo">Gruppo 4</p></li>
+      <li><p id="gruppo">LCG C2 - gruppo 4</p></li>
       <li> <img src="logo.png" id="logo" /></li>
       </ul>
       <footer>
